2005-03-23  Sven Neumann  <sven@gimp.org>

	* app/display/gimpcanvas.[ch] (gimp_canvas_draw_text): fixed
	gtk-doc comments; added G_GNUC_PRINTF attribute.

2005-03-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpselectiondata.c (gimp_selection_data_get_image)
	(gimp_selection_data_get_component)
	(gimp_selection_data_get_item): same fix as below for ID-based DND
	types.

2005-03-23  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushmenu.c
	* libgimp/gimpfontmenu.c
	* libgimp/gimpgradientmenu.c
	* libgimp/gimppalettemenu.c
	* libgimp/gimppatternmenu.c: accept names passed over DND no matter
	whether they are NULL-terminated or not.

	* app/widgets/gimpselectiondata.c: same change here, also
	UTF8-validate the selection data before accepting it.

2005-03-23  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushmenu.c
	* libgimp/gimpfontmenu.c
	* libgimp/gimpgradientmenu.c
	* libgimp/gimppalettemenu.c
	* libgimp/gimppatternmenu.c: accept drops on selection widgets as
	requested in bug #10677.

2005-03-23  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpmenu.c: added gtk-doc comments explaining what
	functions to use instead of these deprecated ones.

2005-03-23  Sven Neumann  <sven@gimp.org>

	* app/base/tile-swap.c (tile_swap_init): create the swap directory
	if it doesn't exist. Will still fail if the parent directory is not
	available. Still good enough to close bug #167506.

	* app/app_procs.c: tweaked error message.

2005-03-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colortoalpha.c: unset "Keep transparency", it is
	not what the user wants if this plug-in is being used (bug #151910).

2005-03-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: removed global variables; added a
	short delay after destroying the dialog so that the root window
	gets redrawn; moved camera icon to the action button.

2005-03-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/screenshot.c: always derive image from root